# fhe-bert-tiny-for-gep

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  inference_batch.py  inference_single.py  pyproject.toml  send_batch.py
research-notebooks/: compare.ipynb  sign_approx.ipynb  tanh_approx.ipynb  test_dataset.ipynb
src/: FHEController.cpp  FHEController.h  Utils.h  benchmark_eval.cpp  client_inference.cpp  client_inference_batch.cpp  encrypt_weights.cpp  test_operations.cpp
